# Portfolio

./: README.md
DDPG/: Actor.py  ActorCritic.py  Critic.py  DDPG.py  Memory.py
DDPG/models/: 4901_actor.pt  4901_critic.pt
DDPG/papers/: DDPGlocomotion.pptx
Minor problems/Concurrent Stack/: NB_stack.java  Readme.md  Test.java
Minor problems/Concurrent Stack/C++/: Descriptor.h  Descriptor_Stack.cpp  Node.h  Stack.h  (+2 more)
Minor problems/Knn on Mnist/: knn.py
Minor problems/Svm on Glass/: out.txt  readme.md  readme.txt  svm_hw.py
Pacman Berkley Project/pt_1/: README.md  search.py  searchAgents.py
Pacman Berkley Project/pt_2/: README.md  multiAgents.py
Pacman Berkley Project/pt_3/: README.md  analysis.py  qlearningAgents.py  valueIterationAgents.py
Robocopters/: README.md
Robocopters/Gazebo/: Setup Simulation  guidance.cpp  navigation.py  ros_vision.py
Robocopters/Gazebo/quad_gazebo/: CMakeLists.txt  package.xml
Robocopters/Gazebo/quad_gazebo/launch/: display.launch  quad.launch  quadbuilding.launch
Robocopters/Gazebo/quad_gazebo/worlds/: quad.world  quadbuilding.world  quadbuilding_Heinrich_Demo.world
Robocopters/ROS/: comms  test_1_for_usb.py
Robocopters/vision/: cascades.py  detection.py  image_utils.py  profiles.py  testing.py  tracking.py  training.py  validate.py  video.py  video_analysis.py  vision.py
Unbounded Nonblocking Queue/: Readme.md  nbdeque.h  nbdeque_fine_trans.h  readme.txt
Unbounded Nonblocking Queue/src/: Node.h  Node_trans.h  nbdeque.h  nbdeque_coarse_trans.h  nbdeque_fine_trans.h  nbdeque_select_trans.h  test_class.cpp
(+77 files in other folders)
